# rok-peerless-scholar

./: .gitignore  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/src/: config.rs  main.rs  state.rs
backend/src/handlers/: mod.rs  monitoring.rs  region.rs  screenshot.rs
backend/src/models/: mod.rs  ocr.rs  region.rs
backend/src/services/: mod.rs  ocr.rs  screen_capture.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/common/: Header.tsx  SettingsModal.tsx  index.ts
frontend/src/components/features/history/: HistoryList.tsx
frontend/src/components/features/monitoring/: ControlPanel.tsx  DetectedText.tsx  MonitoredRegion.tsx  index.ts
frontend/src/components/features/selection/: index.tsx
frontend/src/components/features/selection/actions/: SelectionContextMenu.tsx  SelectionPreviewModal.tsx  index.ts
frontend/src/components/features/selection/components/: SelectionHandles.tsx  SelectionHelper.tsx  SelectionInstructions.tsx  SelectionOverlay.tsx  SelectionSizeIndicator.tsx  index.ts
frontend/src/hooks/: useNotification.ts  useScreenshot.ts  useSelection.ts  useTextMonitoring.ts
frontend/src/lib/: api.ts
frontend/src/stores/: screenshotStore.ts  selectionStore.ts  settingsStore.ts  textStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: clipboard.ts  selection.ts
