[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"

# Asynchronous runtime
tokio = { version = "1.28.0", features = ["full"] }
once_cell = "1.21.1"

# Serialization/Deserialization
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Screen capture
scap = "0.0.8"

# Image processing
image = "0.24.6"

# OCR engine
tesseract = "0.13.0"

# Date and time handling
chrono = { version = "0.4.24", features = ["serde"] }

# Logging
log = "0.4.17"
env_logger = "0.10.0"

# Error handling
anyhow = "1.0.71"
thiserror = "1.0.40"
scopeguard = "1.1.0"

[dev-dependencies]
# Testing
mockall = "0.11.4"
test-log = "0.2.11"
assert_fs = "1.0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
